--- a/.wappler/project.json
+++ b/.wappler/project.json
@@ -46,5 +46,5 @@
   "addBase": true,
   "routingHandler": "apache",
   "projectType": "web",
-  "activeGitRemote": "oceanW"
+  "activeGitRemote": "oceanW_2"
 }
