--- a/Stellar-master/pages/ex/.wappler_folder.json
+++ b/Stellar-master/pages/ex/.wappler_folder.json
@@ -2,5 +2,9 @@
   "examp.php": {
     "layoutPage": "",
     "description": ""
+  },
+  "examp2.php": {
+    "layoutPage": "",
+    "description": ""
   }
 }
